# cubecl

./: CUBECL_DIVERGENCE.md
crates/cubecl-core/src/frontend/operation/: dp4a.rs  mod.rs
crates/cubecl-core/src/post_processing/: constant_prop.rs
crates/cubecl-cpp/src/cuda/mma/: cuda_compiler.rs
crates/cubecl-cpp/src/cuda/ptx/: copy_async.cuh
crates/cubecl-cpp/src/shared/: base.rs  instruction.rs
crates/cubecl-cpu/src/compiler/visitor/operation/: arithmetic.rs
crates/cubecl-ir/src/: arithmetic.rs
crates/cubecl-opt/src/analyses/: liveness.rs
crates/cubecl-shim-gen/: Cargo.toml
crates/cubecl-shim-gen/src/: lib.rs
crates/cubecl-spirv/src/: arithmetic.rs
crates/cubecl-wgpu/src/compiler/wgsl/: compiler.rs
